utilities/Sol/modules/grammars/ide/src/test/resources/cocos/valid/CircularDependencyTaskComponent.ide
package invalid

typedef component configuration CircularDependencyTaskComponent {
    label "Some Configuration"

    backend task main
}
