utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/ConfigurationOrderConfiguration.ide
package invalid

 typedef component configuration ConfigurationOrderConfiguration {
     label "Some Configuration"

     backend task main
 }
